# slm-ft-serving

./: .dockerignore  .gitignore  Dockerfile  README.md  chat_template.jinja  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
config/: deployment.yml
docs/: DEPLOYMENT.md  INFRASTRUCTURE.md  SETUP-GUIDE.md  SSM-PARAMETERS.md  STAGE-1-TESTING.md  STAGE-2-TESTING.md  STAGE-3.md
gateway/: Dockerfile  __init__.py  main.py  models.py
gateway/routers/: extraction.py  health.py
gateway/services/: __init__.py  vllm_client.py
gateway/utils/: __init__.py  parsers.py  prompts.py
scripts/: deploy.py
