[tool.poetry]
name = "slm-ft-serving"
version = "0.1.0"
description = "vLLM serving infrastructure for fine-tuned Llama 3.1 8B medical IE model"
authors = ["Long Hoang <longhhoang1202@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
# Shared dependencies used by both deployment scripts and gateway
loguru = "^0.7.2"
pyyaml = "^6.0.2"

[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
# Local deployment scripts only (scripts/deploy.py)
boto3 = "^1.35.0"

[tool.poetry.group.gateway]
optional = false

[tool.poetry.group.gateway.dependencies]
# FastAPI gateway runtime dependencies (runs in Docker on EC2)
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.9.0"
httpx = "^0.27.0"
python-multipart = "^0.0.12"
pydantic-settings = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
